fix(padding): add padding and semantic tag

--- a/Praktikum-1/assets/styles/styles.css
+++ b/Praktikum-1/assets/styles/styles.css
@@ -57,6 +57,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: var(--space-2) 0;
 }
 
 .navigation nav {
